tests/paczka2/big_fuzzy/84080257.err
Error in line 7: hcBUIADU S918 203,1
Error in line 8: hcBUIADU A974 71,2
Error in line 22: Mw7qVuB6nb A974 224,8
Error in line 33: Mw7qVuB6nb S918 57,9
Error in line 30: b1TSGTDgJi8 S386 43,4
Error in line 42: b1TSGTDgJi8 A974 81,1
Error in line 48: A{74 S560 8,5
Error in line 41: ZmV3qmZ7ol S560 80,0
Error in line 47: A974 S560 30,5
Error in line 75: cmXq S918 6,75
Error in line 37: Mw7qVuB6nb S560 12,4
Error in line 53: ZmV3qmZ7ol A974 62,6
Error in line 79: Mw7qVuB6nb S918 37,0
Error in line 87: Mw7qVuB6nb A974 82,4
Error in line 93: A974 S918 -1,3
Error in line 88: Mw7qVuB6nb S386 4,6
Error in line 104: hcBUIADU S918 71,8
Error in line 91: A974 S918 14,2
Error in line 118: ZmV3qmZ7ol S5,0 4,,0
Error in line 109: ZmV3qmZ7ol S560 83,6
Error in line 123: ZmV3qmZ7ol S560 47,J
Error in line 78: 4AZYLt S386 3,4
Error in line 132: 4AZYLt S91+ 132,7
Error in line 130: 4AZYLt S918 30,3
Error in line 120: ZmV3qmZ7ol S918 34,2
Error in line 127: b1TSGTDgJi8 S560 5,8
Error in line 143: cmXq S386 90,8
Error in line 135: hcBUIADU S560 236,1
Error in line 154: ZmV3qmZ7ol S918 89,2
Error in line 162: ZmV3qmZ7ol A974 83,9
Error in line 169: hcBUIADU S560 62,2
Error in line 167: A974 S918 0,8
Error in line 161: b1TSGTDgJi8 A974 3,7
Error in line 194: 4AZYLt S386 80,3
Error in line 188: ZmV3qmZ7ol S560 79,1
Error in line 197: A974 A974 15,1
Error in line 207: b1TSGTDgJi8 A974 79,0
Error in line 208: b1TSGTDgJi8 S386 55,5
Error in line 225: 4AZYLt S560 67,3
Error in line 216: ZmV3qmZ7ol A974 155,8
Error in line 226: 4AZYLt S386 97,9
Error in line 236: 4AZYLt S918 32,3
Error in line 232: b1TSGTDgJi8 S918 31,1
Error in line 243: hcBUIADU S918 28,8
Error in line 240: cmXq S560 34,1
